[tool.poetry]
name = "polyhx-hackatown-2022"
version = "0.0.1"
description = "Projet de l'équipe \"Le Javascript c'est pour les singes\" pour l'édition 2022 du Hackatown de PolyHx"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
rasa-sdk = "~2.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
rasa = "~2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
